# ffmpeg_win_example

./: .gitmodules  CMakeLists.txt  README.md
include/: inttypes.h
src/: main.cpp
